<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:backgroundTint="@color/pink"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mondayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/monday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tuesdayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/tuesday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/mondayButton"
        app:layout_constraintStart_toStartOf="@+id/mondayButton"
        app:layout_constraintTop_toBottomOf="@+id/mondayButton" />

    <Button
        android:id="@+id/wednesdayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/wednesday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tuesdayButton"
        app:layout_constraintStart_toStartOf="@+id/tuesdayButton"
        app:layout_constraintTop_toBottomOf="@+id/tuesdayButton" />

    <Button
        android:id="@+id/thursdayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/thursday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/wednesdayButton"
        app:layout_constraintStart_toStartOf="@+id/wednesdayButton"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayButton" />

    <Button
        android:id="@+id/fridayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/friday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/thursdayButton"
        app:layout_constraintStart_toStartOf="@+id/thursdayButton"
        app:layout_constraintTop_toBottomOf="@+id/thursdayButton" />

    <Button
        android:id="@+id/saturdayButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_custom"
        android:shadowColor="@color/black"
        android:text="@string/saturday"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/fridayButton"
        app:layout_constraintStart_toStartOf="@+id/fridayButton"
        app:layout_constraintTop_toBottomOf="@+id/fridayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>